unpackaged/main/default/objects/zkfedex__CustomAddressSourcePackage__c/zkfedex__CustomAddressSourcePackage__c.object-meta.xml
<CustomObject>
    <label>FedEx Custom Address Source Package</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Custom Address Source Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Custom Address Source Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>