unpackaged/main/default/objects/zkfedex__CustomAddressSourcePackage__c/fields/zkfedex__CustomAddressSource__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CustomAddressSource__c</fullName>
    <label>FedEx Custom Address Source</label>
    <referenceTo>zkfedex__CustomAddressSource__c</referenceTo>
    <relationshipLabel>FedEx Custom Address Source Packages</relationshipLabel>
    <relationshipName>FedEx_Custom_Address_Source_Packages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>