unpackaged/main/default/objects/zkfedex__CustomAddressSourcePackage__c/fields/zkfedex__DryIceWeightField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DryIceWeightField__c</fullName>
    <label>Dry Ice Weight Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>