unpackaged/main/default/objects/zkfedex__CustomAddressSourcePackage__c/fields/zkfedex__Index__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Index__c</fullName>
    <label>Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>