unpackaged/main/default/objects/zkfedex__CustomAddressSourcePackage__c/fields/zkfedex__IonInEquipField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__IonInEquipField__c</fullName>
    <label>Ion in Equip Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>