unpackaged/main/default/objects/zkfedex__CustomAddressSourcePackage__c/fields/zkfedex__IonWithEquipField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__IonWithEquipField__c</fullName>
    <label>Ion w/ Equip Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>