unpackaged/main/default/objects/zkfedex__CustomAddressSourcePackage__c/fields/zkfedex__IsReturnPackage__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__IsReturnPackage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Return Package</label>
    <type>Checkbox</type>
</CustomField>