unpackaged/main/default/objects/zkfedex__CustomAddressSourcePackage__c/fields/zkfedex__LengthField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__LengthField__c</fullName>
    <label>Length Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>