unpackaged/main/default/objects/zkfedex__CustomAddressSourcePackage__c/fields/zkfedex__MetalInEquipField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__MetalInEquipField__c</fullName>
    <label>Metal in Equip Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>