unpackaged/main/default/objects/zkfedex__CustomAddressSourcePackage__c/fields/zkfedex__MetalWithEquipField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__MetalWithEquipField__c</fullName>
    <label>Metal w/ Equip Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>