unpackaged/main/default/objects/zkfedex__CustomAddressSourcePackage__c/fields/zkfedex__PriorityAlertContentField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PriorityAlertContentField__c</fullName>
    <label>Priority Alert Content Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>