unpackaged/main/default/objects/zkfedex__CustomAddressSourcePackage__c/fields/zkfedex__PriorityAlertField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PriorityAlertField__c</fullName>
    <label>Priority Alert Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>