unpackaged/main/default/objects/zkfedex__CustomAddressSourcePackage__c/fields/zkfedex__PriorityAlertPlusField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PriorityAlertPlusField__c</fullName>
    <label>Priority Alert Plus Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>