unpackaged/main/default/objects/zkfedex__CustomAddressSourcePackage__c/fields/zkfedex__WeightField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__WeightField__c</fullName>
    <label>Weight Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>