unpackaged/main/default/objects/zkfedex__CustomAddressSourcePackage__c/fields/zkfedex__WidthField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__WidthField__c</fullName>
    <label>Width Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>